--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ plugins {
     id 'application'
     id 'checkstyle'
     id 'com.github.spotbugs' version '6.0.6'
+    id 'pmd'
 }
 
 repositories {
@@ -48,3 +49,4 @@ tasks.named('test') {
 
 apply from: "$rootDir/gradle/checkstyle.gradle"
 apply from: "$rootDir/gradle/spotbugs.gradle"
+apply from: "$rootDir/gradle/pmd.gradle"
