--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'idea'
     id 'checkstyle'
     id 'com.github.spotbugs' version '6.0.6'
     id 'pmd'
