--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
     id 'idea'
+    id 'jacoco'
     id 'checkstyle'
     id 'com.github.spotbugs' version '6.0.6'
     id 'pmd'
@@ -40,6 +41,7 @@ application {
 apply from: "$rootDir/gradle/java.gradle"
 
 apply from: "$rootDir/gradle/test.gradle"
+apply from: "$rootDir/gradle/jacoco.gradle"
 
 apply from: "$rootDir/gradle/checkstyle.gradle"
 apply from: "$rootDir/gradle/spotbugs.gradle"
